# lexigram

./: .coveragerc  .env.example  .gitignore  404.html  Dockerfile  README.md  antora-playbook.yml  cdk.json  docker-compose.yml  index.html  justfile  lefthook.yml  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml
.claude/: CLAUDE.md  settings.json
.claude/rules/: code-style.md  conventions.md  testing.md
.github/actions/setup/: action.yml
.github/workflows/: ci-cd.yml  deploy.yml  test-coverage.yml
app/: api_client.py  config.py  dynamo_utils.py  handler.py  main.py  text_utils.py
app/agents/: crew.py  lex_analyst.py  lex_marketer.py  lex_pictor.py  main.py  task.py  tools.py
app/config/: agents.yml
app/errors/: __init__.py  exceptions.py  handlers.py
app/models/: consult.py  content.py  lex_pictor.py  loda.py  publisher.py
app/services/: consult.py  dynamo_utils.py  instagram_auth.py  law.py  law_processing_service.py  law_sync_service.py  law_tracker.py  legifrance.py  loda.py  publisher.py
docs/: antora.yml  index.md
docs/explanation/: index.md  multi-agent-architecture.md
docs/how-to/: index.md  optimize-dalle-prompts.md
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: agents.adoc  configuration.adoc  crew-orchestration.adoc  dalle-image-generation.adoc  data-models.adoc  deployment.adoc  development-setup.adoc  dynamodb.adoc  error-handling.adoc  french-law-domain.adoc  index.adoc  infrastructure.adoc  instagram-auth.adoc  instagram-publishing.adoc  legifrance-integration.adoc  mistral-image-generation.adoc  privacy-policy.adoc  prompt-engineering.adoc  system-overview.adoc  tasks.adoc  vision.adoc  workflow.adoc
docs/modules/adrs/: nav.adoc
docs/modules/adrs/pages/: 0001-multi-agent-architecture.adoc  0002-crewai-framework.adoc  0003-mistral-ai-for-summarization.adoc  0004-dynamodb-for-law-tracking.adoc  0005-docker-lambda-deployment.adoc  0006-antora-knowledge-base.adoc  0007-mistral-image-generation.adoc  _template.adoc
docs/reference/: agents.md  index.md
docs/tutorials/: index.md  installation.md
explanation/: index.html
explanation/multi-agent-architecture/: index.html
how-to/: index.html
how-to/optimize-dalle-prompts/: index.html
infra/: app.py  dynamo_db_table.py  helpers.py  lexigram_stack.py
infra/constructs/: dynamo_db_table.py
reference/: index.html
reference/agents/: index.html
scripts/: generate_coverage_report.py
search/: search_index.json
tests/: conftest.py
tests/eval/: conftest.py  scoring.py  test_pipeline.py
tests/infra/unit/: test_infra_stack.py
tests/integration/: conftest.py
tests/integration/app/: test_api_client.py  test_handler.py  test_main_workflow.py
tests/integration/app/agents/: test_lex_pictor.py
tests/integration/app/services/: test_consult.py  test_dynamo_utils.py  test_instagram_auth.py  test_law.py  test_law_processing_service.py  test_law_sync_service.py  test_law_tracker.py  test_legifrance.py  test_loda.py
tests/unit/app/: test_api_client.py
tests/unit/app/agents/: test_lex_pictor.py  test_task.py
tests/unit/app/models/: test_loda.py
tests/unit/app/services/: test_legifrance.py
tutorials/: index.html
tutorials/installation/: index.html
