[project]
name = "lexigram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aws-cdk-lib>=2.194.0",
    "aws-lambda-powertools>=3.11.0",
    "aws-lambda-typing>=2.20.0",
    "beautifulsoup4>=4.13.4",
    "boto3>=1.38.7",
    "constructs>=10.4.2",
    "crewai>=0.118.0",
    "dotenv>=0.9.9",
    "openai>=1.76.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.10.1",
    "pylegifrance>=1.2.1b1",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=app --cov-report=term --cov-report=html --cov-config=.coveragerc"
timeout = 300

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.6",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
]

[tool.ruff]
line-length = 88
lint.extend-select = ["I", "W292"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
