[project]
name = "lexigram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aws-cdk-lib>=2.248.0",
    "aws-lambda-powertools>=3.26.0",
    "aws-lambda-typing>=2.20.0",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.83",
    "constructs>=10.6.0",
    "crewai>=1.13.0",
    "dotenv>=0.9.9",
    "litellm>=1.83.0",
    "mistralai>=1.9.11",
    "pillow>=12.2.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.10.1",
    "pylegifrance>=1.3.0b1",
    "requests>=2.33.1",
    "tenacity",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=app --cov-report=term --cov-report=html --cov-config=.coveragerc"
timeout = 300

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
eval = [
    "anthropic>=0.89.0",
    "langfuse>=4.0.6",
    "openinference-instrumentation-crewai>=1.1.1",
    "pytest-timeout",
]

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["infra"]

[tool.ruff]
line-length = 88
lint.extend-select = ["I", "W292"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
